tests/baselines/reference/voidOperatorInvalidOperations.errors.txt
==== tests/cases/compiler/voidOperatorInvalidOperations.ts (3 errors) ====
    // Unary operator void
    
    // operand before void
    var ANY = ANY void ;    //expect error
                  ~~~~
!!! error TS1005: ',' expected.
                       ~
!!! error TS1003: Identifier expected.
    
    // miss an operand
    var ANY1 = void ;
                    ~
!!! error TS1003: Identifier expected.